Fix position for Google map on mobile and tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,8 +154,6 @@ main {
 
 .lower-content {
     background-color: white;
-    padding-left: 30px;
-    padding-right: 30px;
     padding-top: 15px;
     flex-grow: 0;
     min-height: 140px;
@@ -177,6 +175,8 @@ main {
 iframe {
     max-width: 260px;
     max-height: 200px;
+    padding-left: 10px;
+    padding-right: 10pxgit;
 }
 
 #rsvp-section {
